@@ -2,11 +2,14 @@
 
 <beans>
     <bean id="manager" class="edu.mcw.rgd.gff3.Manager">
-        <property name="version" value="--Gff3 generation pipeline -- build Jun 09, 2023 --" />
+        <property name="version" value="--Gff3 generation pipeline -- build Jun 20, 2023 --" />
 
         <property name="assemblies"><!-- file system location for files for given assembly-->
             <map>
                 <entry key="372" value="data/jbrowse2/Rat/rn7" />
+                <entry key="360" value="data/jbrowse2/Rat/rn6" />
+                <entry key= "70" value="data/jbrowse2/Rat/rn5" />
+                <entry key= "60" value="data/jbrowse2/Rat/rn4" />
             </map>
         </property>
     </bean>
@@ -20,7 +23,10 @@
 
         <property name="processedMapKeys">
             <list>
-                <value>372</value>
+                <value>372</value>  <!-- rn7 -->
+                <value>360</value>  <!-- rn6 -->
+                <value>70</value>  <!-- rn5 -->
+                <value>60</value>  <!-- rn4 -->
             </list>
         </property>
         <property name="termTrackNames">
@@ -96,15 +102,14 @@
         <property name="processedMapKeys">
             <list>
                 <value>372</value>  <!-- rn7 -->
+                <value>360</value>  <!-- rn6 -->
+                <value>70</value>  <!-- rn5 -->
+                <value>60</value>  <!-- rn4 -->
             </list>
         </property>
         <!--
         <property name="processedAssemblies">
             <list>
-                <value>species:RAT    mapKey:60  toDir:data/Gene/Rat/   compress:bgzip</value>
-                <value>species:RAT    mapKey:70  toDir:data/Gene/Rat/   compress:bgzip</value>
-                <value>species:RAT    mapKey:360 toDir:data/Gene/Rat/   compress:bgzip</value>
-                <value>species:RAT    mapKey:372 toDir:data/Gene/Rat/   compress:bgzip</value>
                 <value>species:HUMAN  mapKey:13  toDir:data/Gene/Human/ compress:bgzip</value>
                 <value>species:HUMAN  mapKey:17  toDir:data/Gene/Human/ compress:bgzip</value>
                 <value>species:HUMAN  mapKey:38  toDir:data/Gene/Human/ compress:bgzip</value>
@@ -133,15 +138,14 @@
         <property name="processedMapKeys">
             <list>
                 <value>372</value>  <!-- rn7 -->
+                <value>360</value>  <!-- rn6 -->
+                <value>70</value>  <!-- rn5 -->
+                <value>60</value>  <!-- rn4 -->
             </list>
         </property>
         <!--
         <property name="processedAssemblies">
             <list>
-                <value>species:RAT    mapKey:60  toDir:data/Qtl/Rat/rat34/ compress:bgzip</value>
-                <value>species:RAT    mapKey:70  toDir:data/Qtl/Rat/rat50/ compress:bgzip</value>
-                <value>species:RAT    mapKey:360 toDir:data/Qtl/Rat/rat60/ compress:bgzip</value>
-                <value>species:RAT    mapKey:372 toDir:data/Qtl/Rat/rat72/ compress:bgzip</value>
                 <value>species:HUMAN  mapKey:13  toDir:data/Qtl/Human/human36/ compress:bgzip</value>
                 <value>species:HUMAN  mapKey:17  toDir:data/Qtl/Human/human37/ compress:bgzip</value>
                 <value>species:HUMAN  mapKey:38  toDir:data/Qtl/Human/human38/ compress:bgzip</value>
@@ -157,16 +161,15 @@
         <property name="processedMapKeys">
             <list>
                 <value>372</value>  <!-- rn7 -->
+                <value>360</value>  <!-- rn6 -->
+                <value>70</value>  <!-- rn5 -->
+                <value>60</value>  <!-- rn4 -->
             </list>
         </property>
 
         <!--
         <property name="processedAssemblies">
             <list>
-                <value>species:RAT    mapKey:60  toDir:data/Marker/Rat/ compress:bgzip  assemblySymbol:rn3.4</value>
-                <value>species:RAT    mapKey:70  toDir:data/Marker/Rat/ compress:bgzip  assemblySymbol:rn5</value>
-                <value>species:RAT    mapKey:360 toDir:data/Marker/Rat/ compress:bgzip  assemblySymbol:rn6</value>
-                <value>species:RAT    mapKey:372 toDir:data/Marker/Rat/ compress:bgzip  assemblySymbol:rn7</value>
                 <value>species:HUMAN  mapKey:13  toDir:data/Marker/Human/ compress:bgzip</value>
                 <value>species:HUMAN  mapKey:17  toDir:data/Marker/Human/ compress:bgzip</value>
                 <value>species:MOUSE  mapKey:18  toDir:data/Marker/Mouse/ compress:bgzip</value>
